# Scoped

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  imgui.ini
core/inc/: channel.hpp  circularbuffer.hpp  displayframe.hpp  intensitymap.hpp  oscilloscope.hpp  processor.hpp  signalbuffer.hpp  trace.hpp  trigger.hpp  ui.hpp  usb.hpp
core/inc/common/: channel.hpp  circularbuffer.hpp  constants.hpp  oscilloscope.hpp  trace.hpp
core/inc/hardware/: usb.hpp
core/inc/processing/: fft_processor.hpp  filter_processor.hpp  iprocessor.hpp  math_processor.hpp  measurement_processor.hpp  trigger.hpp  window.hpp
core/inc/ui/: colors.hpp  intensitymap.hpp  ui.hpp  ui_helpers.hpp
core/src/: circularbuffer.cpp  displayframe.cpp  intensitymap.cpp  main.cpp  signalbuffer.cpp  trigger.cpp  ui.cpp  usb.cpp
core/src/hardware/: usb.cpp
core/src/ui/: intensitymap.cpp  ui.cpp  ui_channel.cpp  ui_fft.cpp  ui_filter.cpp  ui_math.cpp  ui_measurement.cpp  ui_v2.cpp
docs/: ARCHITECTURE.md  TODO.md
inc/: test.hpp
src/: main.cpp  test.cpp
